--- a/tunr/templates/tunr/base.html
+++ b/tunr/templates/tunr/base.html
@@ -12,7 +12,7 @@
     <h1>Tunr</h1>
     <nav>
         <a href="/songs">Songs</a>
-        <a href="/">Artists</a>
+        <a href="/artists">Artists</a>
     </nav>
     {% block content %} {% endblock %}
 </body>
