Full CRUD on two models now

--- a/tunr/templates/tunr/base.html
+++ b/tunr/templates/tunr/base.html
@@ -13,6 +13,8 @@
     <nav>
         <a href="/songs">Songs</a>
         <a href="/artists">Artists</a>
+        <a href="/songs/new">New Song</a>
+        <a href="/artists/new">New Artist</a>
     </nav>
     {% block content %} {% endblock %}
 </body>
