--- a/tunr/templates/tunr/artist_detail.html
+++ b/tunr/templates/tunr/artist_detail.html
@@ -1,7 +1,8 @@
 {% extends 'tunr/base.html' %}
 {% block title %}- {{artist.name}}{% endblock %}
 {% block content %}
-<h2>{{artist.name}} <a href="">Edit me!</a></h2>
+<h2>{{artist.name}} <a href="{% url 'artist_update' pk=artist.pk %}">Edit me!</a></h2>
+<a href="{% url 'artist_delete' pk=artist.pk %}">Delete me!</a></h2>
 <h4>{{artist.nationality}}</h4>
 
 <img src="{{artist.photo_url}}" alt="{{artist.name}}" class="artist-photo"/>
