--- a/tunr/templates/tunr/song_detail.html
+++ b/tunr/templates/tunr/song_detail.html
@@ -1,7 +1,8 @@
 {% extends 'tunr/base.html' %}
 {% block title%}- {{song.title}} {% endblock %}
 {% block content %}
-<h2>{{song.title}} <a href="">Edit me!</a></h2>
+<h2>{{song.title}} <a href="{% url 'song_update' pk=song.pk %}">Edit me!</a></h2>
+<a href="{% url 'song_delete' pk=song.pk %}">Delete me!</a></h2>
 <h4>{{song.album}}</h4>
 
 <img src="{{song.preview_url}}" alt="{{song.title}}" class="song-photo"/>
